<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/material_blue_grey_800">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:paddingTop="@dimen/padding"
            >


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/temp1"
                    android:textSize="@dimen/my_text_size"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/search"
                    android:textSize="@dimen/my_text_size"
                    android:gravity="center_horizontal"
                    android:id="@+id/temperature"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/tr"
                    android:textSize="@dimen/my_text_size"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/search"
                    android:textSize="@dimen/my_text_size"
                    android:gravity="center_horizontal"
                    android:id="@+id/dewPoint"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/vp"
                    android:textSize="@dimen/my_text_size"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/search"
                    android:textSize="@dimen/my_text_size"
                    android:gravity="center_horizontal"
                    android:id="@+id/humidity"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/press1"
                    android:textSize="@dimen/my_text_size"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/search"
                    android:textSize="@dimen/my_text_size"
                    android:gravity="center_horizontal"
                    android:id="@+id/press"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/wind1"
                    android:textSize="@dimen/my_text_size"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/search"
                    android:textSize="@dimen/my_text_size"
                    android:gravity="center_horizontal"
                    android:id="@+id/wind"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/chan"
                    android:textSize="@dimen/my_text_size"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/search"
                    android:textSize="@dimen/my_text_size"
                    android:gravity="center_horizontal"
                    android:id="@+id/changes"
                    android:textColor="@color/switch_thumb_normal_material_light"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/weatherTime"
        android:textColor="@color/switch_thumb_normal_material_light"
        android:textSize="15sp"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>

    <ImageButton
        android:id="@+id/refreshButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:src="@drawable/ic_action"
        android:background="@color/material_blue_grey_900"
        android:contentDescription="@string/Refresh"
        android:onClick="refreshClick"
        />
</LinearLayout>
